Added 2 libraries to handle buttons and LEDS

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,5 @@ lib_deps =
   Adafruit LED Backpack Library@~1.1.6
   RTClib@~1.2.1
   DFRobotDFPlayerMini@~1.0.2
+  OneButton@f78433c209
+  TTLED@1.0.1
