it compiles again

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,6 @@ lib_deps =
   Adafruit LED Backpack Library@~1.1.6
   RTClib@~1.2.1
   DFRobotDFPlayerMini@~1.0.2
-  TTLED@1.0.1
-  ArduinoLog@1.0.3
-  ArduinoSTL@1.1.0
+
+[env:custom_monitor_speedrate]
+monitor_speed = 57600
